0.09

0.08 2018-01-22T11:48:45+01:00
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.

0.07 2018-01-22T09:27:07+01:00
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Update Module::Install to 1.18 version.
 - Update author name.
 - Update copyright years.

0.06 2015-09-26T10:25:40+02:00
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Move author tests to xt/ directory.
 - Remove obsolete item from SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.05 2014-11-02T12:31:33+01:00
 - Add EXAMPLE section to doc.
 - Fix functionality with Apache2 mod_fcgid.
 - Remove 'init' parameter check.
 - Rewrite B<> to C<> in doc.
 - Simplify code.
 - Update Module::Install to 1.14 version.

0.04 2014-10-17T07:33:26+02:00
 - Rewrite to new FCGI API.

0.03 2014-10-16T23:28:42+02:00
 - Add missing Test::NoWarnings test dependency.

0.02 2014-10-13T13:10:47+02:00
 - Add LICENSE file.
 - Add minimal version of Perl.
 - Fix MANIFEST file.
 - Rename CHANGES to Changes.
 - Update Module::Install to 1.12 version.

0.01 2013-02-26
 - First version.