@@ -1,4 +1,5 @@
 0.09
+ - Update Module::Install to 1.19 version.
 
 0.08 2018-01-22T11:48:45+01:00
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
